Fix elements jumping when scroll appears in firefox

--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,7 @@ body, html {
   flex: 1 1 auto;
   display: flex;
   overflow: hidden;
+  height: 100%;
 }
 
 #svgContainer {
